--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@mdx-js/mdx": "^3.0.1",
     "@vcarl/remark-headings": "^0.1.0",
     "classnames": "^2.5.1",
-    "next": "14.2.3",
+    "gray-matter": "^4.0.3",
+    "next": "^15.0.2",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-syntax-highlighter": "^15.5.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-reading-time": "^2.0.1",
+    "shiki": "^1.22.2",
     "vfile": "^6.0.3",
     "vfile-matter": "^5.0.0"
   },
@@ -29,11 +30,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4"
   }
 }
