--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gray-matter": "^4.0.3",
     "next": "^15.0.2",
     "next-themes": "^0.3.0",
+    "pdfjs-dist": "^4.8.69",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rehype-autolink-headings": "^7.1.0",
