--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,6 @@
   "mdx": {
     "checkMdx": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "pages/react/stateManagement/test.jsx"],
   "exclude": ["node_modules"]
 }
